Update location dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+2
   google_maps_flutter: ^0.5.21+12
-  location: ^2.3.5
+  location:
+    git:
+      url: git@github.com:Lyokone/flutterlocation.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
