--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   google_maps_flutter: ^0.5.21+12
   location:
     git:
-      url: git@github.com:zeienko-vitalii/flutterlocation.git
+      url: https://github.com/zeienko-vitalii/flutterlocation.git
       ref: master
 
 dev_dependencies:
